[tool.poetry]
name = "poetry_access_private_repo"
version = "0.1.0"
description = ""

[tool.poetry.dependencies]
python = "^2.7"
test = { git = "git@gitlab.com:colinbjohnson/test.git", branch = "master" }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry<=1.0.2"]
build-backend = "poetry.masonry.api"
